# factorio-learning-environment

./: .dockerignore  .example.env  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  BUILD.md  CLAUDe.md  MANIFEST.in  PUBLISHING.md  README.md  _test_install.py  _test_remote_install.py  demo.md  download_entity_sprites.py  download_sprites.py  ensure_codex_factorio_server.sh  example_batch_streaming.py  example_system_prompt_usage.py  export_tasks_for_harbor.py  fle_mcp_server.py  message_log.txt  nano  prepare_build.py  process_cinema_frames.sh  pyproject.toml  render_saves.py  resolve_scenario_port.py  resume_audit.py  run.py  run_video_reliable.sh  run_with_video.py  server.py  setup.py  simple_system_prompt_demo.py  test.py  test_remote_install.py  test_vqa_system.py  validate_installation.py  viewer.py
.agent/: CONTINUITY.md
.agent/prompt_drafts/: step30_system_prompt_orchestrator_v1.md  step30_system_prompt_original.md
.claude/: mcp.json  mcp_servers.json  settings.json
.claude/agents/: factorio-game-controller.md
.claude/hooks/: README.md  auto_continue.py  auto_continue.sh  start_overlay.sh  stop_overlay.sh  update_overlay.py
.github/scripts/: process-results.js
.github/workflows/: deploy-leaderboard.yml  deploy-website.yml  docs-dev.yml  docs.yml  factorio-test.yml  lint.yml  nightly-build.yml  process-results.yml  publish-pypi.yml  publish-testpypi.yml
agents/: RAG_agent.py  __init__.py  agent_abc.py  backtracking_agent.py  backtracking_system.py  basic_agent.py  gym_agent.py  query_agent.py  visual_agent.py
agents/utils/: llm_factory.py  metrics.py  parse_response.py  prompt_utils.py  python_parser.py
configs/: lab_play_all_tasks.json
data/: run_trace.py  screenshots_from_run.py
docs/: 0.1.0.html  build_mode_design_spec.md  build_mode_implementation_plan.md  index.html  release.0.2.0.html
eval/: CLAUDE.md  evaluator.py
fle/: MCP_STREAMING_README.md  __init__.py  api.py  bridge_server.py  entities_rename.py  logger.py  mcp_dataloader.py  minimal.py  overlay.py  overlay_mcp.py  run.py  run_eval.py  server.py  simple_bridge.py  simple_overlay.py  trajectory_runner.py  viewer.py
fle_actions/: action_converter.py  extract.py  periodic_logger.py  processing_config.py  processors.py  run_actions.py  run_actions_batched.py  run_actions_batched_streaming.py  run_actions_unbatched.py  run_actions_utils.py
packaging/: __init__.py.template  setup.py.template
scripts/: resume_audit.py
server/: __init__.py  init.py  prompts.py  repository.py  resources.py  state.py  tools.py  unix_tools.py  version_control.py
tests/: conftest.py  test_eval.py  test_functions.py  test_inventory_deduction.py  test_production_stats.py  test_rcon_utils.py  test_variables.py  test_warnings.py
vqa_dataset/: README.md  __init__.py  blueprint_loader.py  blueprint_renderer.py  dataset_pipeline.py  inspect_solver.py  question_generator.py
(+2181 files in other folders)
